--- a/app/src/main/res/drawable/bold.xml
+++ b/app/src/main/res/drawable/bold.xml
@@ -14,7 +14,7 @@
 
             <stroke
                 android:width="1dp"
-                android:color="#8F8E8E"
+                android:color="#BABABA"
                 />
             <solid
                 android:color="#ffffff"
